<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    tools:context="mcr.apps.gridcoinremote.MainActivity">
    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="#111"
            android:clickable="true"
            android:focusable="true"
            />
    </android.support.v4.widget.DrawerLayout>

    <TextView
        android:text="@string/wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:textSize="36sp" />

    <ImageView
        android:contentDescription="@string/logo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/gridcoin_logo"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/balance"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:text="@string/youraddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/balance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:text="@string/blocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/blocks"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:text="@string/netweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PoRDifficulty"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/NetWeight"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:text="@string/cpid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NetWeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/CPIDText"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:text="@string/grcmagunit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CPIDText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/MagUnit"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:text="@string/mymag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MagUnit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/MyMag"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:text="@string/clientversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MyMag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/version"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:text="@string/connections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/Connections"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:text="@string/por_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PoRDifficulty"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/blocks"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"/>
</RelativeLayout>
